force-app/main/default/objects/Budget__c/Budget__c.object-meta.xml
<CustomObject>
    <label>予算</label>
    <nameField>
        <label>予算名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>