force-app/main/default/objects/Budget__c/fields/amount__c.field-meta.xml
<CustomField>
    <fullName>amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>金額</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>