force-app/main/default/objects/Budget__c/fields/BugetCategory__c.field-meta.xml
<CustomField>
    <fullName>BugetCategory__c</fullName>
    <formula>BudgetAndActuals__r.BugetCategory__r.Name</formula>
    <label>予算カテゴリ</label>
    <type>Text</type>
</CustomField>