force-app/main/default/objects/Budget__c/fields/month__c.field-meta.xml
<CustomField>
    <fullName>month__c</fullName>
    <defaultValue>month(today())</defaultValue>
    <label>月</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>