force-app/main/default/objects/Budget__c/fields/textYearMonth__c.field-meta.xml
<CustomField>
    <fullName>textYearMonth__c</fullName>
    <description>レポート用文字列</description>
    <formula>text(year__c) + &quot;/&quot; + if( len(text(month__c))=1,&quot;0&quot;+text(month__c), text(month__c) )</formula>
    <label>年月</label>
    <type>Text</type>
</CustomField>