force-app/main/default/objects/Budget__c/fields/year__c.field-meta.xml
<CustomField>
    <fullName>year__c</fullName>
    <defaultValue>year(today())</defaultValue>
    <inlineHelpText>西暦で記載</inlineHelpText>
    <label>年</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>